fixed box shadow border issue on mobile submit button

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -451,6 +451,8 @@ body {
 
 .submit-container{
     width: 100%;
+    box-sizing: border-box;
+    height: 100px;
     display: flex;
     justify-content: center;
     margin-top: 30px;
